--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                 <a href="#"><i class="fab fa-twitter"></i></a>
     <div class="social-media">
       <a href="https://twitter.com/yourprofile" class="social-icon">Twitter</a>
-      <a href="https://linkedin.com/in/yourprofile"class="social-icon">LinkedIn</a>
-      <a href="https://github.com/yourprofile"  class="social-icon">GitHub</a>
+      <a href="https:www.linkedin.com/in/adi-ajagbe-a47538325" class="social-icon">LinkedIn</a>
+      <a href="https://github.com/Dara-adi"  class="social-icon">GitHub</a>
           <div class="mail-to">
             
             <a href="mailto:adiajagbe28@gmail.com"style="color:skyblue;text-decoration:none">contact me</a>
